test_certificates/invalid_chain_of_trust/client.csr
-----BEGIN CERTIFICATE REQUEST-----
MIIC1jCCAb4CAQAwgZAxCzAJBgNVBAYTAk5MMRAwDgYDVQQIDAdVdHJlY2h0MQ4w
DAYDVQQHDAVNYWFybjEWMBQGA1UECgwNQ2xpZW50IFN5dmVudDEOMAwGA1UECwwF
VXNlcnMxFjAUBgNVBAMMDWNsaWVudC5zeXZlbnQxHzAdBgkqhkiG9w0BCQEWEGNs
aWVudEBzeXZlbnQubmwwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDR
2pmbuNe3eeqSLWjkEEjw+2ZZz8yn9jHoYAsGCb2Vu0kgGPlSkR5vGXpdU7occCHj
dF2XKT6ReXqOmolH1Rh7mTALNAUKO18vNkIAfu0D2u5K1JQkllscd13OSLbtY9Kd
+R4EDCnb+OQ/Xs6mh4FEieV88UvoM/EBHDisf6XVNOqgPzsVFQugxqZmKw6UBoZv
jDCYtgGUphNy/Bpj6qHX7snLr51r4nCJEKXIytrAAFmRhrBhexQnkZFTXrpFUUlW
KzAQSFIOAqXjZK2hTOnm+TK9xDywYKCjCsZN8TMKRT6R8CWGSprKQqCMvFPLPPuY
XJFfeuMvZvhqUkhfKvZHAgMBAAGgADANBgkqhkiG9w0BAQsFAAOCAQEAAD8ffLWx
4+oIrKoZuF+E2/vz8hcBTj9nYLX04fzezaZGpQ8LUnt2q8I5JDHMCfZHnUdhBmnw
IL5uyKyZAJ+p9VCm5TUOAB1vbkUokXgnHlLWhdAAVevz2cnnUKwi6KoWX9nbNWSh
yVSQuO8e2A9Pp/b62c6Hy3igAdC/9ftzsiNljhtW6m6pQqgyh47vzcnZxYhlJCgZ
g6x/dl4yHFPzzSg8mBVMxKiO6VIguTAlwDbYYFrh3X4uRHBYGtAoyH+oiqt52MPR
v0fkH7D3TPNec9KhJCvHKBOkdx/Nf0MK3HrA2Mf6/pQQXRWx3KZGwlAefZbFUzKm
ffqm64dCG1Pc1A==
-----END CERTIFICATE REQUEST-----
